--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-      "test": "mocha test.js"
+    "test": "mocha test.js"
   },
   "files": [
     "index.js",
@@ -30,12 +30,12 @@
   ],
   "devDependencies": {
     "grunt-contrib-jshint": "~0.7.0",
-    "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-watch": "~0.5.0",
-    "load-grunt-tasks": "~0.2.0",
-    "time-grunt": "~0.2.0",
+    "grunt-mocha-test": "^0.12.7",
     "jshint-stylish": "~0.1.3",
-    "mocha": "~1.18.2"
+    "load-grunt-tasks": "~0.2.0",
+    "mocha": "^2.2.5",
+    "time-grunt": "~0.2.0"
   },
   "dependencies": {
     "request": "~2.33.0",
